--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -1,3 +1,11 @@
+div {
+    transition: box-shadow 300ms ease-out;
+}
+
+div:hover {
+    // background: rgba(0, 0, 0, 0.3);
+}
+
 html, body {
     width: 100%;
     height: 100%;
@@ -9,7 +17,115 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: sans-serif;
+    font-family: Helvetica, sans-serif;
+    background-image: url('../../app/img/bg.png');
+}
+
+header {
+    height: 30px;
+    background: white;
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 30px;
+    border-bottom: 1px #aaa solid;
+    z-index: 3;
+
+    .logo {
+        width: 100px;
+        height: 100px;
+        float: left;
+    }
+
+    .title {
+        width: 141px;
+        height: 34px;
+        float: left;
+        font-size: 29px;
+    }
+
+    .main-menu {
+        width: 610px;
+        float: left;
+        line-height: 50px;
+        ul {
+            display: block;
+            margin: 0 auto;
+            width: 530px;
+            height: 50px;
+            padding: 0;
+            li {
+                display: block;
+                float: left;
+                width: 130px;
+                text-align: center;
+                font-size: 25px;
+                line-height: 50px;
+
+                &:hover a, &.active a {
+                    border-top: 1px solid black;
+                    margin-top: -1px;
+                }
+
+
+                a {
+                    color: black;
+                    display: block;
+                    &:active {
+                        border-top: 1px solid red;
+                        margin-top: -1px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.side {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    background: white;
+    width: 230px;
+    left: 0;
+    z-index: 1;
+    box-shadow: 2px 0 6px #aaa;
+    padding-left: 40px;
+    padding-top: 120px;
+
+    .menu-block {
+        .menu-title {
+            text-transform: uppercase;
+        }
+
+        ul {
+            list-style: none;
+            li {
+                width: 170px;
+                height: 32px;
+                line-height: 20px;
+                &:hover a, &.active a {
+                    background: rgba(0, 0, 0, 0.2);
+                }
+                a {
+                    padding: 6px;
+                    display: block;
+                    color: black;
+                    border-radius: 12px;
+                }
+            }
+        }
+    }
+}
+
+.main {
+
+}
+
+footer {
+
 }
 
 a {
